--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/MeetPup/301_final_project#readme",
   "dependencies": {
     "express": "^4.14.1",
+    "express-request-proxy": "^2.0.0",
     "page": "^1.7.1"
   }
 }
